--- a/django_and_react/package.json
+++ b/django_and_react/package.json
@@ -27,12 +27,14 @@
     "axios": "^0.16.1",
     "babel-preset-stage-1": "^6.1.18",
     "django-react-csrftoken": "^1.0.1",
+    "js-cookie": "^2.1.4",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "4.0.0",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.0.4",
+    "redux-cookie": "^0.5.9",
     "redux-form": "^4.1.3",
     "redux-promise": "^0.5.3",
     "redux-react-session": "^1.1.2"
