--- a/django_and_react/package.json
+++ b/django_and_react/package.json
@@ -20,8 +20,8 @@
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
-    "webpack-bundle-tracker": "^0.2.0"
+    "webpack-bundle-tracker": "^0.2.0",
+    "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "axios": "^0.16.1",
