--- a/django_and_react/package.json
+++ b/django_and_react/package.json
@@ -29,6 +29,7 @@
     "django-react-csrftoken": "^1.0.1",
     "js-cookie": "^2.1.4",
     "lodash": "^3.10.1",
+    "moment": "^2.18.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-emoji-picker": "^1.0.13",
