--- a/django_and_react/package.json
+++ b/django_and_react/package.json
@@ -34,6 +34,7 @@
     "react": "^0.14.3",
     "react-datepicker": "^0.46.0",
     "react-dom": "^0.14.3",
+    "react-dropzone": "^3.13.0",
     "react-emoji-picker": "^1.0.13",
     "react-emoji-react": "^0.3.0",
     "react-redux": "4.0.0",
