--- a/django_and_react/package.json
+++ b/django_and_react/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^2.1.4",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.30.10",
     "react-dom": "^0.14.3",
     "react-emoji-picker": "^1.0.13",
     "react-emoji-react": "^0.3.0",
