--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^3.10.1",
     "moment": "^2.18.1",
     "react": "^0.14.3",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-bootstrap": "^0.30.10",
     "react-datepicker": "^0.46.0",
     "react-dom": "^0.14.3",
@@ -41,6 +42,7 @@
     "react-redux": "4.0.0",
     "react-router": "^2.0.0-rc5",
     "react-tabs": "^0.8.3",
+    "react-transition-group": "^1.1.2",
     "redux": "^3.0.4",
     "redux-cookie": "^0.5.9",
     "redux-form": "^4.1.3",
