--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-emoji-react": "^0.3.0",
     "react-redux": "4.0.0",
     "react-router": "^2.0.0-rc5",
+    "react-sparklines": "^1.6.0",
     "react-tabs": "^0.8.3",
     "react-transition-group": "^1.1.2",
     "recharts": "^0.22.3",
